# sp-obs

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  RELEASE.md  pyproject.toml  ruff.toml
.github/workflows/: publish-to-pypi.yml  test.yml
src/sp_obs/: __init__.py  billing.py  provider.py  tag.py  utils.py
src/sp_obs/_internal/: __init__.py  config.py  constants.py  exporter.py  processor.py  scrubbing.py  tracer.py
src/sp_obs/_internal/core/: recognised_integrations.py
src/sp_obs/_internal/core/aiohttp/: __init__.py  aiohttp.py
src/sp_obs/_internal/core/grpc/: __init__.py  grpc.py  grpc_aio.py  grpc_integrations.py  grpc_utils.py
src/sp_obs/_internal/core/httpx/: async_stream.py  httpx.py  sync_stream.py
src/sp_obs/_internal/core/providers/: __init__.py  anthropic.py  base.py  deepgram.py  elevenlabs.py  firecrawl.py  mistral.py  openai.py  perplexity.py  scrapingbee.py  serpapi.py  vertexai.py  voyageai.py
src/sp_obs/_internal/core/requests/: requests.py
src/sp_obs/_internal/providers/: __init__.py  anthropic.py  base.py  httpx.py  mistral.py  openai.py  openai_agents.py  requests.py
tests/: test_billing.py
tests/test_configuration/: __init__.py  test_config.py
tests/test_core_instrumentation/: __init__.py  conftest.py  test_aiohttp_instrumentation.py  test_httpx_async_stream.py  test_httpx_instrumentation.py  test_httpx_sync_stream.py  test_integration_mapping.py  test_requests_instrumentation.py
tests/test_core_instrumentation/utils/: span_helpers.py
tests/test_exporter/: test_safe_decode.py
tests/test_grpc/: __init__.py  test_async_grpc.py  test_sync_grpc.py
tests/test_instrumentation/: __init__.py  test_openai.py  test_tracer_provider.py
tests/test_providers/test_anthropic/: test_basic_chat.py
tests/test_providers/test_deepgram/: test_deepgram.py
tests/test_providers/test_eleven_labs/: test_elevenlabs.py  test_elevenlabs_speech_to_text.py
tests/test_providers/test_firecrawl/: test_firecrawl.py
tests/test_providers/test_openai/: test_basic_chat_span.py
tests/test_providers/test_perplexity/: __init__.py  test_perplexity_span.py
tests/test_providers/test_scrapingbee/: test_scrapingbee.py
tests/test_providers/test_serpapi/: test_serpapi.py
tests/test_scrubbing/: __init__.py  test_scrubbers.py
