[project]
name = "sp-obs"
version = "0.1.0"
description = "Observabilty intergration with Spinal"
readme = "README.md"
authors = [
    { name = "Andrew van Rensburg", email = "andrew@withspinal.com" }
]
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "opentelemetry-api>=1.34.1",
    "opentelemetry-sdk>=1.34.1",
    "requests>=2.32.4",
    "logfire>=3.0.0,<4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.13",
]
