[project]
name = "sp-obs"
version = "0.1.4"
description = "Observability integration with Spinal"
readme = "README.md"
authors = [
    { name = "Andrew van Rensburg", email = "andrew@withspinal.com" }
]
license = "MIT"
requires-python = ">=3.11"
keywords = ["opentelemetry", "observability", "tracing", "monitoring", "llm", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "opentelemetry-api>=1.35.0,<2",
    "opentelemetry-sdk>=1.35.0,<2",
    "httpx>=0.28.0,<1.0.0",
    "orjson>=3.11.1,<4",
    "opentelemetry-instrumentation-httpx>=0.56b0,<1",
    "opentelemetry-instrumentation-requests>=0.56b0,<1",
]

[project.urls]
Homepage = "https://github.com/withspinal/sp-obs"
Issues = "https://github.com/withspinal/sp-obs/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
openai = [
    "opentelemetry-instrumentation-openai>=0.43.1,<1",
    "opentelemetry-instrumentation-openai-agents>=0.43.1,<1"
]
anthropic = [
    "opentelemetry-instrumentation-anthropic>=0.43.1,<1",
]
mistral = [
     "opentelemetry-instrumentation-mistralai>=0.43.1,<1",
]

all = [
    "opentelemetry-instrumentation-openai>=0.43.1,<1",
    "opentelemetry-instrumentation-anthropic>=0.43.1,<1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.12.5",
    "twine>=6.1.0",
]
